--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="hero-content">
           <div class="hero-text">
-            <h1>Hi, I'm <span class="accent">John Doe</span></h1>
+            <h1>Hi, I'm <span class="accent">Musango Brian Wambua</span></h1>
             <p>Full Stack Developer & UI/UX Designer</p>
             <div class="social-links">
               <a href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
