--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>John Doe - Portfolio</title>
+  <title>Brian W. Musango - Portfolio</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="hero-content">
           <div class="hero-text">
-            <h1>Hi, I'm <span class="accent">Musango Brian Wambua</span></h1>
+            <h1>Hi, I'm <span class="accent">Brian W. Musango</span></h1>
             <p>Full Stack Developer & UI/UX Designer</p>
             <div class="social-links">
               <a href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
